# C-C-

./: .gitignore  CMakeLists.txt
include/: egg_cook_thread.h  rice_cook_thread.h  serve_thread.h  thread_define.h  thread_test.h
src/: CMakeLists.txt  egg_cook_thread.cpp  rice_cook_thread.cpp  serve_thread.cpp  thread_test.cpp
test/: CMakeLists.txt  main.cpp
